// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast renders a success notification 1`] = `
<div>
  <div
    class="toast success"
  >
    <div
      class="toast-content"
    >
      <div
        class="toast-content-content"
      >
        <p
          class="toast-description"
        >
          Success information
        </p>
      </div>
      <div
        class="toast-close-content"
      >
        <button
          class="toast-close-btn"
          role="close-toast"
          type="button"
        >
          <span
            class="sr-only"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-white hover:text-gray-500"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Toast renders an error notification 1`] = `
<div>
  <div
    class="toast error"
  >
    <div
      class="toast-content"
    >
      <div
        class="toast-content-content"
      >
        <p
          class="toast-description"
        >
          Error information
        </p>
      </div>
      <div
        class="toast-close-content"
      >
        <button
          class="toast-close-btn"
          role="close-toast"
          type="button"
        >
          <span
            class="sr-only"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-white hover:text-gray-500"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
